# loop-ad_infra

./: .env.example  .env.secrets.example  .gitignore  README.md  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ecs-deploy.yml  frontend-deploy.yml  infra-check.yml
assets/user-data/: clickhouse.sh  kafka.sh
docs/: app-repository-guide.md  cost-model.md  data-contract-repo-plan.md  guide_aws_event_pipeline_performance_test.md  infra-improvement-log.md  managed-service-transition-plan.md  private_connector_reference_architecture.md  process_aws_perf_test_result_recording.md  requirements.md  secrets-setup.md  service-endpoints.md  template_aws_perf_test_run_report.md
docs/github-actions/: app-ecs-deploy.example.yml  frontend-deploy.example.yml  (+1 more)
lib/: loop-ad_aws_cdk_v2-stack.ts
performance-tests/: README.md
performance-tests/reference/tools/phase4-clickhouse/producer-env/: pyproject.toml
scripts/: estimate-dev-monthly-cost.mjs  put-openai-api-key.mjs  refuse-deploy.mjs  sync-dev-secrets.mjs
src/: cdk-app-config.ts  cdk-app.ts  dev-config.ts  lifecycle-stacks.ts  loop-ad-stack.ts  perf-phase0-stack.ts  runtime-helpers.ts
test/: config-validation.test.ts  config.test.ts  construct-level-policy.test.ts  data.test.ts  github-actions.test.ts  helpers.ts  infra-contract.test.ts  local-contract.test.ts  loop-ad_aws_cdk_v2.test.ts  network.test.ts  perf-phase0.test.ts  repository.test.ts  runtime.test.ts  secrets-sync.test.ts  security-groups.test.ts  setup-jsii-deprecations.ts  stack-synthesis.test.ts
(+1143 files in other folders)
